--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fatu-ai",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,9 +10,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^0.10.0",
+    "@google/generative-ai": "^0.24.1",
+    "@octokit/core": "^6.1.5",
+    "@octokit/rest": "^21.1.1",
+    "@uiw/react-markdown-preview": "^5.1.3",
+    "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.1"
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
