--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@octokit/core": "^6.1.5",
     "@octokit/rest": "^21.1.1",
     "@uiw/react-markdown-preview": "^5.1.3",
+    "class-variance-authority": "^0.7.1",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
