--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@uiw/react-markdown-preview": "^5.1.3",
     "class-variance-authority": "^0.7.1",
     "next": "15.3.1",
+    "parse-diff": "^0.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
-    "react-syntax-highlighter": "^15.6.1"
+    "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
